# drop_guard

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml
examples/: drop.rs  rainbow.rs  thread.rs  threadpool.rs
src/: lib.rs
tests/: test.rs
