[package]
name = "drop_guard"
version = "0.1.0"
authors = ["Stefan Schindler <dns2utf8@estada.ch>"]

description = """
The drop_guard crate enables you to implement the Drop trait on any type.
"""
categories = [
    "rust-patterns",
    "data-structures",
]

readme = "README.md"
documentation = "https://docs.rs/drop_guard"
repository = "https://github.com/dns2utf8/drop_guard"

license = "MIT/Apache-2.0"

include = [
    "**/*.rs",
    "README.md",
    "CHANGELOG.md",
    "Cargo.toml",
]

[badges]
travis-ci = { repository = "dns2utf8/drop_guard", branch = "master" }
appveyor = { repository = "dns2utf8/drop_guard", branch = "master", service = "github" }

[dependencies]

[dev-dependencies]
threadpool = "1.4"
